<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="application_name">Browser</string>
    <string name="choose_upload">Choose file for upload</string>
    <string name="uploads_disabled">File uploads are disabled.</string>
    <string name="new_tab">New tab</string>
    <string name="new_incognito_tab">New incognito tab</string>
    <string name="tab_bookmarks">Bookmarks</string>
    <string name="tab_most_visited">Most visited</string>
    <string name="tab_history">History</string>
    <string name="tab_snapshots">Saved pages</string>
    <string name="added_to_bookmarks">Added to bookmarks.</string>
    <string name="removed_from_bookmarks">Removed from bookmarks.</string>
    <string name="sign_in_to">Sign in to <xliff:g id="hostname">%s1</xliff:g> \"<xliff:g id="realm">%s2</xliff:g>\"</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="action">Sign in</string>
    <string name="bookmarks_add_page">Save bookmark</string>
    <string name="bookmarks_search">Browser</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pref_link_prefetch_value_never" translatable="false">NEVER</string>
    <string name="pref_link_prefetch_value_wifi_only" translatable="false">WIFI_ONLY</string>
    <string name="pref_link_prefetch_value_always" translatable="false">ALWAYS</string>
    <string name="pref_link_prefetch_default_value" translatable="false">@string/pref_link_prefetch_value_wifi_only</string>
    <string-array name="pref_link_prefetch_values" translatable="false">
        <item><xliff:g>@string/pref_link_prefetch_value_never</xliff:g></item>
        <item><xliff:g>@string/pref_link_prefetch_value_wifi_only</xliff:g></item>
        <item><xliff:g>@string/pref_link_prefetch_value_always</xliff:g></item>
    </string-array>
    <string name="menu_preferences">Settings</string>
    <string name="page_info">Page info</string>
    <string name="page_info_view">View page info</string>
    <string name="page_info_address">Address:</string>
    <string name="search_label" translatable="false">Browser</string>
    <string name="search_hint">Search or type URL</string>
    <string name="search_button_text">Go</string>
    <string name="search_settings_description">Bookmarks and web history</string>
    <string name="accessibility_button_back">Go back</string>
    <string name="accessibility_button_forward">Go forward</string>
    <string name="accessibility_button_refresh">Refresh page</string>
    <string name="accessibility_button_stop">Stop page load</string>
    <string name="accessibility_button_addbookmark">Bookmark page</string>
    <string name="accessibility_button_search">Search</string>
    <string name="accessibility_button_voice">Start voice search</string>
    <string name="accessibility_button_bookmarks">Bookmarks</string>
    <string name="accessibility_button_closetab">Close tab</string>
    <string name="accessibility_button_newtab">Open new tab</string>
    <string name="accessibility_button_newincognitotab">Open new incognito tab</string>
    <string name="accessibility_button_clear">Clear input</string>
    <string name="accessibility_button_uaswitch">Switch user agent</string>
    <string name="accessibility_button_go">Go</string>
    <string name="accessibility_button_navscreen">Page manager</string>
    <string name="accessibility_button_more">More options</string>
    <string name="accessibility_state_incognito">Incognito page</string>
    <string name="accessibility_state_frozen">Saved page</string>
    <string name="accessibility_transition_navscreen">Tab management</string>
    <string name="accessibility_button_bookmarks_folder_up">Previous folder</string>
    <string name="webstorage_outofspace_notification_title">Browser storage full</string>
    <string name="webstorage_outofspace_notification_text">Touch to free up space.</string>
    <string name="webstorage_clear_data_title">Clear stored data</string>
    <string name="contextmenu_dial_dot">Dial\u2026</string>
    <string name="contextmenu_add_contact">Add contact</string>
    <string name="contextmenu_send_mail">Send email</string>
    <string name="contextmenu_map">Map</string>
    <string name="stopping">Stopping\u2026</string>
    <string name="stop">Stop</string>
    <string name="reload">Refresh</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="save">OK</string>
    <string name="do_not_save">Cancel</string>
    <string name="location">Address</string>
    <string name="account">Account</string>
    <string name="containing_folder">Add to</string>
    <string name="new_folder">New folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="delete_folder">Delete folder</string>
    <string name="no_subfolders">No subfolders.</string>
    <string name="add_to_bookmarks_menu_option">Bookmarks</string>
    <string name="add_to_homescreen_menu_option">Home screen</string>
    <string name="add_to_other_folder_menu_option">Other folder</string>
    <string name="name">Label</string>
    <string name="http">http://</string>
    <string name="save_to_bookmarks">Save to bookmarks</string>
    <string name="bookmark_this_page">Bookmark this page</string>
    <string name="remove">Remove</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="create_shortcut_bookmark">Add shortcut to home</string>
    <string name="open_bookmark">Open</string>
    <string name="remove_bookmark">Delete bookmark</string>
    <string name="remove_from_bookmarks">Remove from bookmarks</string>
    <string name="remove_history_item">Remove from history</string>
    <string name="set_as_homepage">Set as homepage</string>
    <string name="bookmark_saved">Saved to bookmarks.</string>
    <string name="bookmark_not_saved">Couldn\'t save bookmark.</string>
    <string name="homepage_set">Homepage set.</string>
    <string name="bookmark_needs_title">"Bookmark must have a name."</string>
    <string name="bookmark_needs_url">"Bookmark must have a location."</string>
    <string name="bookmark_url_not_valid">This URL isn\'t valid.</string>
    <string name="bookmark_cannot_save_url">This URL can\'t be bookmarked.</string>
    <string name="bookmark_page">Bookmark last-viewed page</string>
    <string name="bookmark_thumbnail_view">Thumbnails</string>
    <string name="bookmark_list_view">List</string>
    <string name="current_page">from\u0020</string>
    <string name="delete_bookmark_warning">Delete bookmark \"<xliff:g id="bookmark">%s</xliff:g>\"?</string>
    <string name="open_all_in_new_window">Open all in new tabs</string>
    <string name="goto_dot">Go</string>
    <string name="select_dot">Select text</string>
    <string name="close_other_tabs">Close other tabs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="shortcut_bookmark">Bookmark</string>
    <string name="shortcut_bookmark_title">Choose a bookmark</string>
    <string name="history">History</string>
    <string name="menu_view_download">Downloads</string>
    <string name="copy_page_url">Copy page URL</string>
    <string name="share_page">Share page</string>
    <string name="menu_save_snapshot">Save for offline reading</string>
    <string name="saving_snapshot">Saving\u2026</string>
    <string name="snapshot_failed">Couldn\'t save for offline reading.</string>
    <string name="contextheader_folder_bookmarkcount"><xliff:g id="bookmark_count">%d</xliff:g> bookmarks</string>
    <string name="contextheader_folder_empty">Empty folder</string>
    <string name="contextmenu_openlink">Open</string>
    <string name="contextmenu_openlink_newwindow">Open in new tab</string>
    <string name="contextmenu_openlink_newwindow_background">Open in new background tab</string>
    <string name="contextmenu_savelink">Save link</string>
    <string name="contextmenu_sharelink">Share link</string>
    <string name="contextmenu_copy">Copy</string>
    <string name="contextmenu_copylink">Copy link URL</string>
    <string name="contextmenu_download_image">Save image</string>
    <string name="contextmenu_view_image">View image</string>
    <string name="contextmenu_set_wallpaper">Set as wallpaper</string>
    <string name="pref_general_title">General</string>
    <string name="pref_general_sync_title">Sync</string>
    <string name="pref_general_autofill_title">Auto-fill</string>
    <string name="pref_autofill_enabled">Form auto-fill</string>
    <string name="pref_autofill_enabled_summary">Fill out web forms with a single touch</string>
    <string name="pref_autofill_profile_editor">Auto-fill text</string>
    <string name="pref_autofill_profile_editor_summary">Set up text to auto-fill in web forms</string>
    <string name="pref_autologin_title">Automatic Google signin</string>
    <string name="pref_autologin_progress">Signing into Google sites using <xliff:g>%s</xliff:g></string>
    <string name="autologin_bar_text">Sign in as</string>
    <string name="autologin_bar_login_text">Sign in</string>
    <string name="autologin_bar_hide_text">Hide</string>
    <string name="autologin_bar_error">Couldn\'t sign in.</string>
    <string name="menu_share_url">Share</string>
    <string name="max_tabs_warning">No more tabs available</string>
    <string name="instant_search_label">Google with Instant (Labs)</string>
    <string name="preview">Preview</string>
    <string name="local_bookmarks">Local</string>
    <string name="ua_switcher_desktop">Request desktop site</string>
    <string name="permission_preload_label">Preload results</string>
    <string name="empty_snapshots_folder">No saved pages.</string>
    <string name="remove_snapshot">Delete saved page</string>
    <string name="snapshot_go_live">Go live</string>
    <string name="choosertitle_sharevia">Share via</string>
    <string name="clear">Clear</string>
    <string name="replace">Replace</string>
    <string name="browser_bookmarks_page_bookmarks_text">Bookmarks</string>
    <string name="title_bar_loading">Loading\u2026</string>
    <string name="progress_dialog_setting_wallpaper">Setting wallpaper\u2026</string>
    <string name="error_console_header_text_minimized" translatable="false">Show JavaScript console</string>
    <string name="error_console_header_text_maximized" translatable="false">JavaScript console</string>
    <string name="error_console_eval_text_hint" translatable="false">Evaluate JavaScript</string>
    <string name="error_console_eval_button_text" translatable="false">Evaluate</string>
    <string name="pref_data_preload_value_never" translatable="false">NEVER</string>
    <string name="pref_data_preload_value_wifi_only" translatable="false">WIFI_ONLY</string>
    <string name="pref_data_preload_value_always" translatable="false">ALWAYS</string>
    <string name="pref_data_preload_default_value" translatable="false">@string/pref_data_preload_value_wifi_only</string>
    <string-array name="pref_data_preload_values" translatable="false">
        <item><xliff:g>@string/pref_data_preload_value_never</xliff:g></item>
        <item><xliff:g>@string/pref_data_preload_value_wifi_only</xliff:g></item>
        <item><xliff:g>@string/pref_data_preload_value_always</xliff:g></item>
    </string-array>
    <string name="permissions_prompt_allow">Allow</string>
    <string name="permissions_prompt_deny">Deny</string>
    <string name="permissions_prompt_remember">Remember preference</string>
    <string name="geolocation_permissions_prompt_share">Share location</string>
    <string name="geolocation_permissions_prompt_dont_share">Decline</string>
    <string name="geolocation_permissions_prompt_remember">Remember preference</string>
</resources>