<?xml version="1.0" encoding="utf-8"?>
<com.liskovsoft.browser.NavigationBarPhone
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@drawable/bg_urlbar"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/title_bg"
        android:layout_width="0dip"
        android:layout_weight="1.0"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/magnify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:paddingRight="8dip"
            android:visibility="gone"
            android:src="@drawable/ic_search_category_suggest" />
        <ImageView
            android:id="@+id/incognito_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dip"
            android:visibility="gone"
            android:src="@drawable/ic_incognito_holo_dark" />
        <FrameLayout
            android:id="@+id/iconcombo"
            android:layout_width="44dip"
            android:layout_height="match_parent"
            android:contentDescription="@string/page_info"
            style="@style/HoloButton">
            <ImageView
                android:id="@+id/favicon"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:paddingLeft="4dip"
                android:paddingRight="8dip"
                android:layout_gravity="center" />
            <ImageView
                android:id="@+id/lock"
                android:layout_width="32dip"
                android:layout_height="32dip"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>
        <ImageView
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="4dip"
            android:contentDescription="@string/accessibility_button_stop"
            android:src="@drawable/ic_stop_holo_dark"
            style="@style/HoloButton" />
        <com.liskovsoft.browser.UrlInputView
            android:id="@+id/url"
            android:focusable="true"
            android:layout_width="0dip"
            android:layout_weight="1.0"
            android:layout_height="match_parent"
            android:fadingEdge="horizontal"
            android:fadingEdgeLength="24dip"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="@string/search_hint"
            android:singleLine="true"
            android:ellipsize="end"
            android:lines="1"
            android:scrollHorizontally="true"
            android:inputType="textUri"
            android:imeOptions="actionGo|flagNoExtractUi|flagNoFullscreen"
            style="@style/Suggestions"
            android:background="@null" />
        <ImageView
            android:id="@+id/voice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="4dip"
            android:contentDescription="@string/accessibility_button_voice"
            android:src="@drawable/ic_voice_search_holo_dark"
            style="@style/HoloButton"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingRight="4dip"
            android:contentDescription="@string/accessibility_button_clear"
            android:src="@drawable/ic_close_window_holo_dark"
            style="@style/HoloButton"
            android:visibility="gone" />
    </LinearLayout>
    <ImageButton
        android:id="@+id/tab_switcher"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
            android:contentDescription="@string/accessibility_button_navscreen"
        android:src="@drawable/ic_windows_holo_dark"
        style="@style/HoloButton" />
    <ImageButton
        android:id="@+id/more"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        style="@style/HoloButton"
        android:gravity="center_vertical"
        android:contentDescription="@string/accessibility_button_more"
        android:src="@drawable/ic_menu_overflow" />
</com.liskovsoft.browser.NavigationBarPhone>
