<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.

     This is the layout for the Geolocation permissions prompt.
-->

<com.android.browser.GeolocationPermissionsPrompt
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/geolocation_permissions_prompt_background"
    android:visibility="gone">

    <!-- 'google.com wants to know your location' -->
    <TextView android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:scrollHorizontally="true"
        android:padding="6dip"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox android:id="@+id/remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_alignLeft="@id/message" />
    <TextView
        android:paddingLeft="4dip"
        android:text="@string/geolocation_permissions_prompt_remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_alignBaseline="@id/remember"
        android:layout_toRightOf="@id/remember" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remember"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="beginning"
        android:dividerPadding="16dip"
        android:background="@null">
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="2dip"
            android:paddingRight="2dip"
            android:measureWithLargestChild="true"
            android:background="@null">
            <Button
                android:id="@+id/dont_share_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/geolocation_permissions_prompt_dont_share" />
            <Button
                android:id="@+id/share_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/geolocation_permissions_prompt_share" />
        </LinearLayout>
    </LinearLayout>

</com.android.browser.GeolocationPermissionsPrompt>
